<resources>
    <string name="app_name">PerfectFit</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading..</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection error</string>
    <string name="try_again">Try again</string>
    <string name="title_trainers">Trainers</string>
    <string name="title_nutritionists">NUTRITIONISTS</string>
    <string name="dummy_text">Secondary line text lorem ipsum dapibus, neque id cursus faucibudaslkdaslkjdal skjdlak sjdlkasj ldkaslkdjass</string>
    <string name="dummy_text3">This lorem ipsum generator is made for all the webdesigners, designers, webmasters and others who need lorem ipsum. Generator is made the way that everyone can use it, but especially for projects which need html markup. You can decide which html tags you want and our generator will generate just as you specified.</string>
    <string name="type_message_hint">Type a message</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="specialization">Specialization</string>
    <string name="about_me">About me</string>
    <string name="dummy_bio">I am a passionate and driven Strength Coach that users my experience as an athlete and couch to design the best program possible for each client.d asd asd asd asd gdfsg sdfh  asudfoi uasdfi gasdiuf oiasdugf isadufis agdfiuds aifj sadiuf isoaudgfoi uasgdfio uasgdfio ugadsifug </string>
    <string name="location">Location</string>
    <string name="dummy_location">Fahad Al-Salem street, Kuwaite</string>
    <string name="coaching">Coaching</string>
    <string name="dummy_coaching">Kids, Teenagers, Adults, Seniors</string>
    <string name="bio">Bio</string>
    <string name="plans">Plans</string>
    <string name="booking">Booking</string>
    <string name="not_specified">Not specified</string>
    <string name="trainer_profile">Trainer profile</string>
    <string name="dummy_specialization">MMA, Martial, Boxing</string>
    <string name="title_activity_search_settings">Search Settings</string>
    <string name="pref_title_activities">Select activity</string>
    <string name="pref_title_countries">Select country</string>
    <string name="pref_title_genders">What genders do I train</string>
    <string name="pref_title_trainers">Groups or individuals</string>
    <string name="pref_title_type">Type</string>
    <string name="pref_title_affiliated">Affiliated with a gym</string>
    <string name="pref_booking_info">Info</string>
    <string name="pref_title_booking_date">Select date</string>
    <string name="pref_title_booking_start_time">Select start time</string>
    <string name="pref_title_booking_end_time">Select end time</string>
    <string name="pref_title_booking_location">Meet-up Location</string>
    <string name="pref_title_booking_medical">Medical history</string>
    <string name="pref_title_promotion_code">Promotion code</string>
    <string name="pref_title_total_price">Total price</string>
    <string name="pref_categories_aerobic">Aerobic items</string>
    <string name="pref_categories_aerobic_wersling">Aerobic and wersling items</string>
    <string name="pref_aerobics">Select categories</string>
    <string name="action_contact">Contact</string>
    <string name="session_tracking">Session tracking</string>
    <string name="rating_reviews">Rating and reviews</string>
    <string name="payment_history">Payment history</string>
    <string name="become_trainer">Become a trainer</string>
    <string name="dummy_name">SoftCustomer</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete_account">Delete account</string>
    <string name="title_activity_user_profile">Profile settings</string>
    <string name="pref_name">Name</string>
    <string name="pref_title_height">Height</string>
    <string name="pref_title_weight">Weight</string>
    <string name="user_info">User info</string>
    <string name="account_info">Account info</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_phone">Phone number</string>
    <string name="dummy_number">+965 111 1111</string>
    <string name="pref_title_password">Password</string>
    <string name="dummy_pass">*******</string>
    <string name="dummy_price">40K</string>
    <string name="dummy_name2">Amanda Fischer</string>
    <string name="review">Review</string>
    <string name="date">Date</string>
    <string name="session_length">Session length</string>
    <string name="price">Price</string>
    <string name="method">Method</string>
    <string name="session">Session</string>
    <string name="dummy_date">10 Oct</string>
    <string name="dummy_length">2 hour</string>
    <string name="dummy_activity">Aerobica</string>
    <string name="dummy_method">PayPal</string>
    <string name="review_placeholder">Add review</string>
    <string name="info">Info</string>
    <string name="dummy_review">For your training session on Tuesday 5 December with Amanda Fisher, please take a nonent to let up know how your trainer did and if you have any feedback for him or us.</string>
    <string name="punctuality_timing">Punctionality / Timing</string>
    <string name="courteosness">Courteosness / Manners</string>
    <string name="performance">Perfomance / Knowledge</string>
    <string name="overall">Overall satisfaction</string>
    <string name="public_review">Public review</string>
    <string name="enter_text">Enter text</string>
    <string name="trainer_feedback">Trainer feedback</string>
    <string name="okay">Okay</string>
    <string name="pref_payment_type">Payment type</string>
    <string name="pref_title_cardholder">Cardholder</string>
    <string name="dummy_card">0000 0000 0000 0000</string>
    <string name="pref_title_number">Number</string>
    <string name="dummy_expire">MM/YY</string>
    <string name="pref_title_expire">Expire</string>
    <string name="pref_cat_booking">Booking info</string>
    <string name="pref_title_trainer">Trainer</string>
    <string name="dummy_time_range">9.00 am - 12.00 pm</string>
    <string name="pref_title_duration">Hours</string>
    <string name="pref_title_add_to_calendar">Add to calendar</string>
    <string name="pref_title_price">Price</string>
    <string name="pref_title_save_payment">Save payment method</string>
    <string name="dummy_code">xxx-xxx</string>
    <string name="dummy_name3">Anna Keller</string>
    <string name="dummy_email2">AnnaKeller@gmail.com</string>
    <string name="pref_payment_visa">Visa</string>
    <string name="pref_payment_mastercard">MasterCard</string>
    <string name="pref_payment_paypal">PayPal</string>
    <string name="pref_payment_KNET">KNET</string>
    <string name="dummy_bank">Central Bank</string>
    <string name="pref_title_bank">Select Bank</string>
    <string name="dummy_prefix">AA</string>
    <string name="pref_title_prefix">Prefix</string>
    <string name="pref_title_pin">PIN</string>
    <string name="pref_title_cash">Cash</string>
    <string name="pref_title_cities">Select cities</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_ok">Okay</string>
    <string name="pref_title_booking_time_range">Select timeframe</string>
</resources>