<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.softcustomer.perfectfit.activities.user.ReviewActivity"
    tools:showIn="@layout/activity_review">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textview_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_review"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_punctuality"
                    style="@style/ReviewText"
                    android:text="@string/punctuality_timing" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar_punctuality"
                    style="@style/ReviewRating" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_courteosness"
                    style="@style/ReviewText"
                    android:text="@string/courteosness" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar_courteosness"
                    style="@style/ReviewRating" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_performance"
                    style="@style/ReviewText"
                    android:text="@string/performance" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar_performance"
                    style="@style/ReviewRating" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_overall"
                    style="@style/ReviewText"
                    android:text="@string/overall" />


                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar_overall"
                    style="@style/ReviewRating" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/public_review" />

        <EditText
            android:id="@+id/edittext_public_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine"
            android:text="@string/dummy_text3" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/trainer_feedback" />

        <EditText
            android:id="@+id/edittext_trainer_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine" />

    </LinearLayout>
</ScrollView>
